# dfox

./: .gitignore  README.md
dfox-core/: Cargo.toml
dfox-core/src/db/: mod.rs  sqlite.rs
dfox-core/src/db/mysql/: mod.rs  types.rs
dfox-core/src/db/postgres/: mod.rs  types.rs
dfox-tui/: Cargo.toml
dfox-tui/src/: main.rs
dfox-tui/src/db/: mod.rs  mysql.rs  postgres.rs
dfox-tui/src/ui/: components.rs  handlers.rs  mod.rs  screens.rs
dfox-tui/src/ui/components/: connection_input.rs  database_client.rs  mod.rs  types.rs
dfox-tui/src/ui/utils/: mod.rs  terminal_guard.rs
